2006-08-24  Jorn Baayen  <jorn@openedhand.com>

	* applets/windowselector/windowselector.c: (sync_icon),
	(rebuild_menu):

	Use default icon if no icon is specified.

2006-08-24  Jorn Baayen  <jorn@openedhand.com>

	* applets/windowselector/windowselector.c: (window_get_icon),
	(rebuild_menu), (button_press_event_cb), (filter_func),
	(screen_changed_cb):

	Show active task icon.

2006-08-24  Jorn Baayen  <jorn@openedhand.com>

	* applets/showdesktop/showdesktop.c: (sync):

	Add nitems check.

	* applets/windowselector/windowselector.c: (get_utf8_property),
	(get_text_property), (window_get_icon),
	(window_menu_item_activate_cb), (rebuild_menu), (menu_hide_cb),
	(button_press_event_cb), (filter_func), (screen_changed_cb):

	Use window icons.

2006-08-23  Jorn Baayen  <jorn@openedhand.com>

	* applets/battery/battery.c: (timeout):

	memset0 apm_info. Thanks valgrind.

2006-08-23  Jorn Baayen  <jorn@openedhand.com>

	* applets/Makefile.am:
	* applets/windowselector/Makefile.am:
	* applets/windowselector/windowselector.c:
	* configure.ac:

	Added window selector applet. Still needs work to make icons
	show up.

	* applets/showdesktop/showdesktop.c: (show_desktop_applet_free),
	(sync), (filter_func), (screen_changed_cb):

	Perform initial sync.

2006-08-23  Jorn Baayen  <jorn@openedhand.com>

	* applets/showdesktop/showdesktop.c: (show_desktop_applet_free),
	(filter_func), (screen_changed_cb):

	Monitor root window correctly.

2006-08-23  Jorn Baayen  <jorn@openedhand.com>

	* applets/battery/Makefile.am:
	* applets/battery/data/Makefile.am:
	* applets/clock/Makefile.am:
	* applets/launcher/Makefile.am:
	* applets/showdesktop/Makefile.am:
	* applets/systray/Makefile.am:
	* matchbox-panel/Makefile.am:

	Makefile cleanups.

2006-08-22  Jorn Baayen  <jorn@openedhand.com>

	* applets/battery/battery.c: (timeout), (mb_panel_applet_create):
	* applets/clock/clock.c: (initial_timeout),
	(mb_panel_applet_create):
	* applets/launcher/launcher.c: (grab_notify_cb),